--- a/Optimizer_R3.ipynb
+++ b/Optimizer_R3.ipynb
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "totaltime, totallines = open(\"Q3/T1/R3T1.txt\") do f\n",
+    "totaltime, totallines = open(\"T1/R3T1.txt\") do f\n",
     "    global lines = readlines(f);\n",
     "end"
    ]
